--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
+    "@mantine/carousel": "^6.0.8",
+    "@mantine/core": "^6.0.8",
+    "@mantine/hooks": "^6.0.8",
+    "@mui/lab": "^5.0.0-alpha.127",
+    "@mui/material": "^5.12.1",
+    "@tabler/icons": "^2.17.0",
     "autoprefixer": "10.4.14",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
+    "embla-carousel-autoplay": "^7.1.0",
+    "embla-carousel-react": "^7.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "feather-icons-react": "^0.6.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.4",
     "next": "13.3.1",
+    "playable": "^2.14.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
+    "react-slugify": "^3.0.2",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "3.3.1"
   }
 }
