--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "13.3.1",
     "feather-icons-react": "^0.6.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "next": "13.3.1",
     "playable": "^2.14.1",
